@startuml
'https://plantuml.com/class-diagram'

entity Account
{
    - FullName: String
    - Username: String
    - Email: String
    - Mobile: Int
    - Password: String
    - Change: Change
    - Role: Role
}

enum Role
{
    USER
    EDITOR
    ADMIN
    OWNER
}

entity Change <<(V, #229988)Embeddable>>
{
    - Date: DateAndTimestamp
    - Type: changeType
    - Account: Account
}

enum ChangeType
{
    CREATE
    EDIT
    DELETE
}

abstract class Metadata <<Parent>>
{
    - Name: String
    - Number: Int
    - Description: String
    - Change: Change
}

entity Page
{
    - Sections: Set<Section>
    - Comments: Set<Comment>
}

entity Comment
{
    - Number: Int
    - Text: Text
    - Answers: Set<Comment>
}

entity Section
{
    - Items: Set<Item>
}

entity Item
{
    - Type: ItemType
    - List: List
    - Content: Content
}

enum ItemType
{
    PARAGRAPH
    LIST
    IMAGE
    VIDEO
}

entity Content <<(V, #229988)Embeddable>>
{
    - Paragraph: String
    - Image: ImageBuffer
}

Page -up-|> Metadata

Section -up-|> Metadata
Section -down-* Page

Item -right-|> Metadata
Item -down-* Section
Item -down-> Content
Item .up. ItemType

Comment -up-* Change
Comment -left-* Page

Content -up-|> Metadata

Change -left-* Metadata
Change -right-> Account
Change .up. ChangeType

Account .up. Role

@enduml